--- a/src/style.css
+++ b/src/style.css
@@ -26,6 +26,10 @@ img {
     align-self: center;
 }
 
+#pic {
+    filter: drop-shadow(0 0 .65rem rgb(212, 148, 255));
+  }
+
 h1 {
     font-size: 130px;
     font-family: "Honk", system-ui;
